tests/functional2/lang/duplicate-traces/eval-fail.err.exp
error:
       … from call site
         at /pwd/in.nix:9:3:
            8| in
            9|   throwAfter 2
             |   ^
           10|

       … while calling 'throwAfter'
         at /pwd/in.nix:4:16:
            3| let
            4|   throwAfter = n:
             |                ^
            5|     if n > 0

       … from call site
         at /pwd/in.nix:6:10:
            5|     if n > 0
            6|     then throwAfter (n - 1)
             |          ^
            7|     else throw "Uh oh!";

       … while calling 'throwAfter'
         at /pwd/in.nix:4:16:
            3| let
            4|   throwAfter = n:
             |                ^
            5|     if n > 0

       … from call site
         at /pwd/in.nix:6:10:
            5|     if n > 0
            6|     then throwAfter (n - 1)
             |          ^
            7|     else throw "Uh oh!";

       … while calling 'throwAfter'
         at /pwd/in.nix:4:16:
            3| let
            4|   throwAfter = n:
             |                ^
            5|     if n > 0

       … caused by explicit throw
         at /pwd/in.nix:7:10:
            6|     then throwAfter (n - 1)
            7|     else throw "Uh oh!";
             |          ^
            8| in

       error: Uh oh!
